--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "module": "dist/index.module.js",
   "source": "src/index.ts",
   "types": "index.d.ts",
-  "author": {
-    "name": "Asanov Ruslan",
-    "email": "bioforge91@gmail.com"
-  },
+  "author": "Asanov Ruslan <bioforge91@gmail.com>",
   "license": "MIT",
   "exports": "./index.js",
   "engines": {
@@ -51,11 +48,18 @@
     "@babel/plugin-proposal-export-default-from": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "bundt": "^1.1.2",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "microbundle": "^0.14.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asanovr/object-transformer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/asanovr/object-transformer/issues"
+  },
+  "homepage": "https://github.com/asanovr/object-transformer#readme"
 }
